--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <form id="finding-form" class="space-y-3">
                             <input type="hidden" id="edit-id">
                             <div><label class="text-[10px] uppercase text-gray-500 ml-1">Report Date</label><input type="date" id="reportDateInput" required class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm focus:border-red-500 outline-none"></div>
-                            <input type="text" id="domain" placeholder="Domain Name" required class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none focus:border-red-500">
-                            <input type="text" id="program" placeholder="Platform Name" required class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none focus:border-red-500">
+                            <input type="text" id="domain" placeholder="Platform Name" required class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none focus:border-red-500">
+                            <input type="text" id="program" placeholder="Domain Name" required class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none focus:border-red-500">
                             <input type="text" id="endpoint" placeholder="Vuln URL / Endpoint" class="w-full bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none focus:border-red-500">
                             <div class="grid grid-cols-2 gap-2">
                                 <select id="severity" class="bg-gray-800 border border-gray-700 p-2 rounded text-sm outline-none">
