--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MSCMKN Tracker | Multi-Scope Database</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/manvendra12006-lgtm/Bug-Tracker/main/Gemini_Generated_Image_jrs0z8jrs0z8jrs0.png">
+    <link rel="icon" type="image/png" href="https://github.com/manvendra12006-lgtm/Bug/blob/main/Gemini_Generated_Image_jrs0z8jrs0z8jrs0.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
